@startuml

interface RecordDAO {
    +{abstract} doAdd(Record record):void
    +{abstract} getRecords():List<Record>
}

class RecordDAOImpl {
    +doAdd(Record record):void
    +getRecords():List<Record>
}

class Record {
    -String name
    -int score
    -Date date

    -getCurDate():Date
    +Record(int score,String name):Record
    +getDate():Date
    +setDate(Date date):void
    +getScore():int
    +setScore(int score):void
    +getName():String
    +setName(String name):void
    +toString():String
}

'数据访问对象接口依赖于数据对象
Record <.. RecordDAO

'RecordEAOImpl实现了RecordDAO接口
RecordDAO <|.. RecordDAOImpl






@enduml